assets/css/_route_ladders.scss
.m-route-ladders {
  box-sizing: border-box;
  display: grid;
  grid-template-columns: auto;
  grid-template-rows:
    [m-route-ladder__header] minmax(auto, max-content)
    [m-route-ladder__controls] minmax(auto, max-content)
    [m-layover-box--top] minmax(auto, max-content)
    [m-ladder] auto
    [m-layover-box--bottom] minmax(auto, max-content)
    [m-incoming-box] max-content;
  height: 100%;
  max-width: 100%;
  overflow-x: scroll;
  padding: 1rem;
  // leave space for the picker container tab, which is always visible
  padding-left: 3rem;
  width: min-content;
}

